update avatar and dark bg-color #000

--- a/themes/kong/layout/_partial/github-link.ejs
+++ b/themes/kong/layout/_partial/github-link.ejs
@@ -22,7 +22,7 @@
     }
 
     .DarkMode .github-corner svg {
-        color: rgb(59 59 59);
+        color: #000;
     }
 
     .github-corner:hover .octo-arm {
